<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameOptionsActivity" 
    >
	<LinearLayout 
    	style="@style/layout_content"
    	android:orientation="vertical"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1"
    	>
		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/gradient_bg" >
		    <TextView
		        android:id="@+id/text_scorecap"
		        style="@style/text.white.bold"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:paddingLeft="10dp"
		        android:layout_centerVertical="true"
		        android:text="@string/game_options_text_scorecap"
		    />
		    <EditText
		        android:id="@+id/input_scorecap"
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:hint="@string/game_options_hint_scorecap"
		        android:inputType="number" >
		    </EditText>
		</RelativeLayout>
	
		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/list_selector">
		    <TextView
		        android:id="@+id/text_roundcap"
		        style="@style/text.white.bold"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:paddingLeft="10dp"
		        android:layout_centerVertical="true"
		        android:text="@string/game_options_text_roundcap"
	        />
	    	<EditText
			    android:id="@+id/input_roundcap"
			    android:layout_width="100dp"
			    android:layout_height="wrap_content"
			    android:layout_alignParentRight="true"
			    android:layout_centerVertical="true"
			    android:hint="@string/game_options_hint_roundcap"
			    android:inputType="number" />
		</RelativeLayout>

	</LinearLayout>
	
    <LinearLayout 
        style="@style/bar_button"
    	>
    	<Button
	  		style="@style/button"
	        android:layout_width="fill_parent"
	        android:text="@string/create_game_button_confirm"
	        android:onClick="confirmEntries"
       	/>
    </LinearLayout>
</LinearLayout>