<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView android:id="@+id/text"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    android:text="@string/main_text_create_game"
	    android:clickable="true"
	    android:onClick="createGame"/>
     
    <ListView android:id="@+id/game_list_view"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">
    </ListView>

    <Button
        android:id="@+id/galleryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showGallery"
        android:text="@string/main_button_gallery" />
    
        <LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
		
        <Spinner
		    android:id="@+id/presets_spinner"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
        
        <Button
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/main_button_set" 
        	android:onClick="setPreset"/>
	</LinearLayout>

</LinearLayout>