<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:padding="5dip" >
    <!-- ListRow Left side Thumbnail image -->
    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip"
        android:padding="3dip" >
        <ImageView
            android:id="@+id/list_image"
            android:contentDescription="@string/app_name"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:src="@drawable/star" />
    </LinearLayout>
    <!-- Rightend Arrow -->
    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/arrow" />
    <!-- City-->
    <TextView
        android:id="@+id/tvRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/list_image"
        android:layout_marginLeft="75dip"
        android:layout_centerVertical="true"
        android:paddingBottom ="10dip"
        android:text="@string/gamelist_round"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="sans" />
    <!-- Weather Information-->
    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRound"
        android:layout_alignLeft="@+id/tvRound"
        android:paddingTop="5dip"
        android:layout_centerHorizontal="true"
        android:text="@string/gamelist_score"
        android:textColor="#dddddd"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/tvNumplayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRound"
        android:layout_toRightOf="@+id/tvScore"
        android:paddingTop="5dip"
        android:paddingLeft="10dip"
        android:layout_centerHorizontal="true"
        android:text="@string/gamelist_numplayers"
        android:textColor="#dddddd"
        android:textSize="15sp" />
</RelativeLayout>  